--- a/public/styles/products.css
+++ b/public/styles/products.css
@@ -3,14 +3,14 @@
   padding: 15px;
 }
 
-.main main .products-section .products .filters {
+.main main .products-section .products .filters-form .filters {
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 10px 5%;
 }
 
-.main main .products-section .products .filters div select {
+.main main .products-section .products .filters-form .filters div select {
   background-color: transparent;
   border: none;
   padding: 5px;
@@ -18,9 +18,25 @@
   cursor: pointer;
 }
 
-.main main .products-section .products .filters div select option:focus {
+.main main .products-section .products .filters-form .filters div select option:focus {
   background-color: var(--primary-color);
   color: white;
+}
+
+.main main .products-section .products .filters-form .submit {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+}
+
+.main main .products-section .products .filters-form .submit .submit-btn {
+  background-color: var(--primary-color);
+  border: none;
+  border-radius: 11px;
+  color: white;
+  width: 20%;
+  padding: 10px 15px;
 }
 
 .main main .products-section .products .products-list .product-card {
