--- a/public/styles/products.scss
+++ b/public/styles/products.scss
@@ -8,22 +8,38 @@ $border-color: rgba(0, 0, 0, 0.14);
                     color: var(--primary-color);
                     padding: 15px;
                 }
-                .filters {
-                  display: flex;
-                  justify-content: space-between;
-                  align-items: center;
-                  padding: 10px 5%;
-                  div {
-                    select {
-                      background-color: transparent;
-                      border: none;
-                      padding: 5px;
-                      outline: none;
-                      cursor: pointer;
-                      option:focus {
-                        background-color: var(--primary-color);
-                        color: white;
+                .filters-form {
+                  .filters {
+                    display: flex;
+                    justify-content: space-between;
+                    align-items: center;
+                    padding: 10px 5%;
+                    div {
+                      select {
+                        background-color: transparent;
+                        border: none;
+                        padding: 5px;
+                        outline: none;
+                        cursor: pointer;
+                        option:focus {
+                          background-color: var(--primary-color);
+                          color: white;
+                        }
                       }
+                    }
+                  }
+                  .submit {
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    padding: 10px;
+                    .submit-btn {
+                      background-color: var(--primary-color);
+                      border: none;
+                      border-radius: 11px;
+                      color: white;
+                      width: 20%;
+                      padding: 10px 15px;
                     }
                   }
                 }
