--- a/public/styles/global.css
+++ b/public/styles/global.css
@@ -25,11 +25,12 @@
 }
 
 ::-webkit-scrollbar {
-  background-color: var(--primary-color);
+  background-color: var(--bg-color);
+  width: 10px;
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: var(--secondary-color);
+  background-color: #e9e9e9;
 }
 
 body {
