--- a/public/styles/global.scss
+++ b/public/styles/global.scss
@@ -37,11 +37,12 @@ $link-color: $secondary-color;
 }
 
 ::-webkit-scrollbar {
-  background-color: var(--primary-color);
+  background-color: var(--bg-color);
+  width: 10px;
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: var(--secondary-color);
+  background-color: #e9e9e9;
 }
 
 body {
