--- a/public/styles/global.css
+++ b/public/styles/global.css
@@ -414,7 +414,8 @@ header > .section-1 .user-actions .action-links {
 }
 
 header > .section-1 .user-actions .action-links .action-link img {
-  filter: invert(64%) sepia(59%) saturate(1175%) hue-rotate(345deg) brightness(100%) contrast(103%);
+  filter: brightness(0) saturate(100%) invert(46%) sepia(62%) saturate(1161%) hue-rotate(140deg) brightness(94%) contrast(101%);
+  width: 25px;
 }
 
 header > .section-1 .user-actions .auth-links {
